<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/prefs_category_general">

        <EditTextPreference
            android:defaultValue="@string/prefs_precision_default"
            android:key="@string/prefs_precision_key"
            android:singleLine="true"
            android:summary="@string/prefs_precision_summary"
            android:title="@string/prefs_precision_title" />

        <CheckBoxPreference
            android:title="@string/prefs_auto_delete_title"
            android:key="@string/prefs_auto_delete_key"
            android:defaultValue="false"
            android:summary="@string/prefs_auto_delete_summary" />

    </PreferenceCategory>
</PreferenceScreen>